--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,30 @@
-fastapi
-uvicorn
-mysql-connector-python
-sqlalchemy
-python-jose[cryptography]
-passlib[bcrypt]
-python-multipart
-email-validator
+annotated-types==0.7.0
+anyio==4.10.0
+bcrypt==4.3.0
+cffi==1.17.1
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.6
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+fastapi==0.116.1
+greenlet==3.2.4
+h11==0.16.0
+idna==3.10
+mysql-connector-python==9.4.0
+passlib==1.7.4
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-jose==3.5.0
+python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+starlette==0.47.2
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+uvicorn==0.35.0
