--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
 rsa==4.9.1
